--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<div class="carousel-box">
 			<div class="title">"El amor es un tesoro que vale más que todo el oro del mundo." - Aladdín</div>
 			<div class="num">09</div>
-			<img src="https://static.wikia.nocookie.net/dominios-encantados/images/8/88/Aladd%C3%ADn_50.jpg/revision/latest/scale-to-width-down/420?cb=20141029195550&path-prefix=es" />
+			<img src="https://pbs.twimg.com/profile_images/1235920711/aladdin_nice_400x400.jpg" />
 		</div>
 	</div>
 	<div class="carousel-item">
@@ -136,7 +136,7 @@
 		<div class="carousel-box">
 			<div class="title">"El amor nos hace hacer locuras." - Hércules</div>
 			<div class="num">16</div>
-			<img src="https://static.wikia.nocookie.net/disney/images/8/85/Profile_-_Hercules.jpg/revision/latest?cb=20200330212414&path-prefix=es" />
+			<img src="hhttps://media.vogue.mx/photos/5eab52c7f63aee4a28b21bc1/2:3/w_2560%2Cc_limit/hercules-y-megara-1997-disney.jpg" />
 		</div>
 	</div>
 	<div class="carousel-item">
