--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<div class="carousel-box">
 			<div class="title">"El amor es un tesoro que vale más que todo el oro del mundo." - Aladdín</div>
 			<div class="num">09</div>
-			<img src="https://pbs.twimg.com/profile_images/1235920711/aladdin_nice_400x400.jpg" />
+			<img src="https://cdn.discordapp.com/attachments/608737908266106882/1249140506408128555/aladdin_nice_400x400.png?ex=66663840&is=6664e6c0&hm=3f2ca05664f67e573ddcf971191fe5cca3bb579d27da33bf76eb93745c35a760&" />
 		</div>
 	</div>
 	<div class="carousel-item">
@@ -136,7 +136,7 @@
 		<div class="carousel-box">
 			<div class="title">"El amor nos hace hacer locuras." - Hércules</div>
 			<div class="num">16</div>
-			<img src="hhttps://media.vogue.mx/photos/5eab52c7f63aee4a28b21bc1/2:3/w_2560%2Cc_limit/hercules-y-megara-1997-disney.jpg" />
+			<img src="https://media.vogue.mx/photos/5eab52c7f63aee4a28b21bc1/2:3/w_2560%2Cc_limit/hercules-y-megara-1997-disney.jpg" />
 		</div>
 	</div>
 	<div class="carousel-item">
